--- a/RunnersLog/Content/Site.css
+++ b/RunnersLog/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,19 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+
+
+.body-content {
+    background-color: lightgray;
+    background-image: url(https://jennapettinato.files.wordpress.com/2013/06/outdoor-running-vs-treadmill-desktop-wallpaper.jpg);
+    background-size: auto;
+    
+}
+
+.custom {
+    font-weight: bold;
+    font-variant-caps: titling-caps;
+    
 }
