--- a/RunnersLog/Views/Runs/Create.cshtml
+++ b/RunnersLog/Views/Runs/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2 class="custom">Create</h2>
+<h2 class="custom">Add new Run</h2>
 
 
 @using (Html.BeginForm())
