--- a/RunnersLog/Views/Shared/_Layout.cshtml
+++ b/RunnersLog/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Reports", "Index", "Reporting")</li>
-                    
+                    <li>@Html.ActionLink("Runs Report", "Index", "Reporting")</li>
+                    <li>@Html.ActionLink("Run Stats", "Create", "Reporting")</li>
                     <li>@Html.ActionLink("Add Run", "Create", "Runs")</li>
                     <li>@Html.ActionLink("Logged Runs", "Index", "Runs")</li>
                 </ul>
