--- a/RunnersLog/Views/Shared/_Layout.cshtml
+++ b/RunnersLog/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+   
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -26,6 +27,7 @@
                     <li>@Html.ActionLink("Run Stats", "Create", "Reporting")</li>
                     <li>@Html.ActionLink("Add Run", "Create", "Runs")</li>
                     <li>@Html.ActionLink("Logged Runs", "Index", "Runs")</li>
+                    <li>@Html.ActionLink("Pace Calculators", "Pace", "Reporting")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
