--- a/RunnersLog/Views/Reporting/Pace.cshtml
+++ b/RunnersLog/Views/Reporting/Pace.cshtml
@@ -5,16 +5,24 @@
 }
 
 
-<h2 class="custom">Pace Calculator</h2>
+<h2 class="custom">Race Pace Calculator</h2>
 
 
 <p>
-    
-    Enter Distance in Km's
-    <input type="text" id="distance" />
-    Enter Time in Minutes
-    <input type="text" id="time" />
-    <input type="button" , id="calculatepacebutton" value="Submit" />
+
+    <label>Enter Distance in Km's</label>
+    <div class="custom2">
+        <input type="text" id="distance" />
+    </div>
+    <hr />
+
+    <label>Enter Time in Minutes</label>
+    <div class="custom2">
+        <input type="text" id="time" />
+        </div>
+    <hr />
+        <input type="button" , id="calculatepacebutton" value="Submit" />
+   
 </p>
 
 <div id="dataDiv"> </div>
