--- a/RunnersLog/Views/Runs/Index.cshtml
+++ b/RunnersLog/Views/Runs/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2 class="custom">Running Log</h2>
+<h2 class="custom">Logged Runs</h2>
 <br/>
 <p>
     @Html.ActionLink("Enter New Run", "Create", null, new { id = "ot", style = "color:black" })
@@ -19,7 +19,7 @@
 
     <p>
         Filter by Distance: @Html.TextBox("SearchString") 
-        <br />
+        <br/>
 
         <input type="submit" value="Filter" class ="btn btn-primary" />
     </p>
@@ -30,8 +30,11 @@
 
 
 
-    <table class="table">
+    <table class="table table-dark table-striped table-responsive">
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Distance)
             </th>
@@ -44,36 +47,35 @@
             <th>
                 @Html.DisplayNameFor(model => model.Calories)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Distance)
-            </th>
+            
             <th></th>
         </tr>
 
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Distance)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Time)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HeartRate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Calories)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Distance)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id, style = "color:black" }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
+        <tr>
+            <th>
+                @Html.DisplayFor(modelItem => item.Date)
+            </th>
+            <td>
+                @Html.DisplayFor(modelItem => item.Distance)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Time)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.HeartRate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Calories)
+            </td>
+           
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id, style = "color:black" }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
         }
 
     </table>
